<resources>
    <string name="sdk_app_name">PaymentsSDK</string>
    <string name="sdk_hint_card_cardholder">Cardholder</string>
    <string name="sdk_hint_card_number">Card number</string>
    <string name="sdk_mask_card_number">#### #### #### ####</string>
    <string name="sdk_hint_cvv">CVV</string>
    <string name="sdk_hint_edit_text_cardholder">Name on card</string>
    <string name="sdk_hint_expiration_date">Expiration date</string>
    <string name="sdk_mask_expiration_date">##/##</string>
    <string name="sdk_payment">Payment</string>
    <string name="sdk_saved_cards">Saved cards</string>
    <string name="sdk_payment_method_card_text">Card</string>
    <string name="sdk_payment_method_card">pay with card</string>
    <string name="sdk_payment_method_iris">pay with iris</string>
    <string name="sdk_payment_method_paypal">pay with paypal</string>
    <string name="sdk_card_step_select_payment_method">Please select payment method</string>
    <string name="sdk_card_step_valid_card">Please enter a valid card</string>
    <string name="sdk_card_step_card_number">Enter your card number</string>
    <string name="sdk_card_step_expiration_date">Please enter expiration date</string>
    <string name="sdk_card_step_cvv">Enter CVV</string>
    <string name="sdk_card_step_cardholder">Enter cardholder\'s name</string>
    <string name="sdk_payment_proceed">Proceed payment</string>
    <string name="sdk_payment_card_info_stored">Your payment info is being stored securely</string>
    <string name="sdk_payment_iris">IRIS payment in progress</string>
    <string name="sdk_payment_paypal">Paypal payment in progress</string>
    <string name="sdk_payment_generic">Payment in progress</string>
    <string name="sdk_payment_successful">Your payment is successful</string>
    <string name="sdk_payment_unsuccessful">Your payment was unsuccessful</string>
    <string name="sdk_button_add_card">Use other card</string>
    <string name="sdk_button_retry">Retry</string>
    <string name="sdk_button_back_to_shop">Back to shop</string>
    <string name="sdk_cart_total">Cart total</string>
    <string name="sdk_select_quick_add_method">Select quick input method</string>
    <string name="sdk_quick_add_scan">Scan your card</string>
    <string name="sdk_quick_add_tap">Tap your card</string>
    <string name="sdk_quick_add_tap_description">Tap your card on the phone to auto fill the card data</string>
    <string name="sdk_quick_add_tap_error_card_unreadable">Could not read card data. Try again, or use another card.</string>
    <string name="sdk_quick_add_tap_error_card_cardholder">Could not read cardholder. Enter cardholder\'s name to continue.</string>
    <string name="sdk_quick_add_tap_error_existing_card">Card already exists. Use another card.</string>
    <string name="sdk_quick_add_tap_error_invalid_card">Invalid card data. Try again, or use another card.</string>
    <string name="sdk_quick_add_tap_error_no_nfc">NFC service is not detected</string>
    <string name="sdk_quick_add_tap_error_nfc_disabled">NFC is not enabled</string>
    <string name="sdk_quick_add_tap_error_could_not_add_card">Something went wrong. Try again, or use another card.</string>
    <string name="sdk_quick_add_scan_error_no_camera">Camera could not be detected</string>
    <string name="sdk_checkbox_save_card">Store card for future transactions</string>
    <string name="sdk_feature_not_available_yet">Feature is temporarily unavailable</string>
    <string name="sdk_instalments_hint">Installments</string>
    <string name="sdk_installments_without">Without installments</string>
    <string name="sdk_instalments_span">month</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>