<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/stateTextView"
        style="@style/CreditCardStepDescription"
        android:text="@string/sdk_card_step_valid_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <gr.cardlink.payments.presentation.ui.view.card.single.SingleCardView
        android:id="@+id/creditCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stateTextView" />

    <gr.cardlink.payments.presentation.ui.view.edittext.MaskedEditTextWrapper
        android:id="@+id/panEditText"
        style="@style/CreditCardEditText.NoPadding"
        android:layout_marginTop="@dimen/spacing_8"
        android:hint="@string/sdk_hint_card_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/creditCardView"
        app:mask="@string/sdk_mask_card_number"
        app:maskedEditTextNextId="@+id/expirationDateEditText" />

    <gr.cardlink.payments.presentation.ui.view.edittext.MaskedEditTextWrapper
        android:id="@+id/expirationDateEditText"
        style="@style/CreditCardEditText.NoPadding"
        android:layout_marginTop="@dimen/spacing_16"
        android:hint="@string/sdk_hint_expiration_date"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@id/spaceView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/panEditText"
        app:mask="@string/sdk_mask_expiration_date"
        app:maskedEditTextNextId="@+id/cvvEditText" />

    <Space
        android:id="@+id/spaceView"
        android:layout_width="@dimen/spacing_24"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/expirationDateEditText"
        app:layout_constraintEnd_toStartOf="@id/cvvEditText"
        app:layout_constraintStart_toEndOf="@id/expirationDateEditText"
        app:layout_constraintTop_toTopOf="@id/expirationDateEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cvvEditText"
        style="@style/CreditCardEditText"
        android:hint="@string/sdk_hint_cvv"
        android:inputType="numberPassword"
        android:maxLength="4"
        app:layout_constraintBottom_toBottomOf="@id/expirationDateEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spaceView"
        app:layout_constraintTop_toTopOf="@id/expirationDateEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cardholderEditText"
        style="@style/CreditCardEditText"
        android:layout_marginTop="@dimen/spacing_16"
        android:hint="@string/sdk_hint_edit_text_cardholder"
        android:maxLength="30"
        android:ellipsize="end"
        android:inputType="textNoSuggestions|textVisiblePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvvEditText" />

    <View
        android:id="@+id/clickableAreaView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/creditCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>